Discontinuity (Euler) Filter - never ends - (deadlock?) #36538

Closed
opened 2013-08-22 15:27:30 +02:00 by Alexander N. · 5 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit, 16MB RAM, i7-3770 CPU/GPU,

- Blender version with error, and version that worked ---

all tested blender versions (from 2.63a ... to 2.68a) with that issue

- Short description of error ---

i have an imported animation that i tried to fix its rotation by using the "Discontinuity (Euler) Filter" operator.
but, when i execute that operation, blender hangs for "ever" and never finishes this operation.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

open the attached blend file "issue - Discontinuity (Euler) Filter.blend",
execute the "Discontinuity (Euler) Filter" operator [Graph Editor -> Key -> Discontinuity (Euler) Filter]...

and now blender does not response anymore - for "ever?".

that animation is a tiny part of an imported model animation. this part, if i scale the duration of the animation, should make a full continue rotation, but it don't. instead it flips badly - so i wanted to fix it with the "Discontinuity (Euler) Filter" - or better i tried.

when blender does not respond, i opened the windows task manager, one CPU-core is always 100% busy (in average). i let it running for 30minutes, than i killed blender.
but the animation is not so extreme big to block blender for ever...
%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, 16MB RAM, i7-3770 CPU/GPU, - Blender version with error, and version that worked --- all tested blender versions (from 2.63a ... to 2.68a) with that issue - Short description of error --- i have an imported animation that i tried to fix its rotation by using the "Discontinuity (Euler) Filter" operator. but, when i execute that operation, blender hangs for "ever" and never finishes this operation. - Steps for others to reproduce the error (preferably based on attached .blend file) --- open the attached blend file "issue - Discontinuity (Euler) Filter.blend", execute the "Discontinuity (Euler) Filter" operator [Graph Editor -> Key -> Discontinuity (Euler) Filter]... and now blender does not response anymore - for "ever?". that animation is a tiny part of an imported model animation. this part, if i scale the duration of the animation, should make a full continue rotation, but it don't. instead it flips badly - so i wanted to fix it with the "Discontinuity (Euler) Filter" - or better i tried. when blender does not respond, i opened the windows task manager, one CPU-core is always 100% busy (in average). i let it running for 30minutes, than i killed blender. but the animation is not so extreme big to block blender for ever... %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%here a tiny video of the flipped animation and the operator that will hang blender...
http://www.file-upload.net/download-7995905/issue---Discontinuity--Euler--Filter.mp4.html%%%

%%%here a tiny video of the flipped animation and the operator that will hang blender... http://www.file-upload.net/download-7995905/issue---Discontinuity--Euler--Filter.mp4.html%%%

%%%Linux 64bit, deadlock reproduced%%%

%%%Linux 64bit, deadlock reproduced%%%

%%%Fixed in r59427, thanks for the report! :)%%%

%%%Fixed in r59427, thanks for the report! :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36538
No description provided.