Fix [#36538] Discontinuity (Euler) Filter - never ends - (deadlock?)

Code could enter in an infinite loop when curve value was an odd multiple of PI (i.e. 180°)...

Current code was also factorized and got rid of fabs calls! ;)